pulsesink: Take a lock on the ringbuffer in acceptcaps

This is needed as a concurrent state change could pull the context or
stream out from under our feet.

https://bugzilla.gnome.org/show_bug.cgi?id=686459